Fixed theme flickering

--- a/src/sass/global/_base.scss
+++ b/src/sass/global/_base.scss
@@ -18,6 +18,11 @@ html {
 }
 
 body {
+    display: none;
+}
+
+body[id*="dark"],
+body[id*="light"] {
     @include flex(column, center, center, center, 2rem, wrap);
 
     width: 100vw;
